--- a/repo/application.yml
+++ b/repo/application.yml
@@ -7,7 +7,7 @@ spring:
       server:
         git:
           uri: https://github.com/BIgoneBig/spring-cloud-config.git
-          search-paths: respo
+          search-paths:
           username:
           password:
 
