--- a/repo/feign-config-dev.yml
+++ b/repo/feign-config-dev.yml
@@ -3,6 +3,7 @@ spring:
     name: sping-cloud-feign-consumer
   zipkin:
     base-url: http://localhost:9411
+    enabled: true
 
 server:
   port: 9001
