--- a/repo/feign-config-dev.yml
+++ b/repo/feign-config-dev.yml
@@ -1,6 +1,10 @@
 spring:
   application:
     name: sping-cloud-feign-consumer
+  boot:
+    admin:
+      client:
+        url: http://localhost:8084
   zipkin:
     base-url: http://localhost:9411
     enabled: true
